--- a/beauty_salon/templates/notes.html
+++ b/beauty_salon/templates/notes.html
@@ -8,11 +8,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	<link rel="stylesheet" href="css/air-datepicker.css">
-	<link rel="stylesheet" href="css/jquery.arcticmodal-0.3.css">
-	<link rel="stylesheet" href="css/simple.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/air-datepicker.css' %}">
+	<link rel="stylesheet" href="{% static 'css/jquery.arcticmodal-0.3.css' %}">
+	<link rel="stylesheet" href="{% static 'css/simple.css' %}">
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body class="notesPage">
 	<section id="mobMenu">
@@ -22,11 +22,11 @@
 					<div class="row">
 						<div class="col-4 col-md-3">
 							<a href="/">
-								<img src="img/Logo.svg" alt="Logo" class="logo header__logo">
+								<img src="{% static 'img/Logo.svg' %}" alt="Logo" class="logo header__logo">
 							</a>
 						</div>
 						<div class="col-3 col-md-2">
-							<img src="img/x.svg" alt="x" class="mobMenuClose">
+							<img src="{% static 'img/x.svg' %}" alt="x" class="mobMenuClose">
 						</div>
 					</div>
 				</div>
@@ -36,7 +36,7 @@
 							<nav>
 								<div class="accaunt__left">
 							<div class="accaunt__ava fic">
-								<img src="img/avatars/1.svg" alt="avatar" class="accaunt__ava_img">
+								<img src="{% static 'img/avatars/1.svg' %}" alt="avatar" class="accaunt__ava_img">
 								<span class="accaunt__ava_name">Алиса И.</span>
 							</div>
 							<div class="accaunt__settings fic">
@@ -49,7 +49,7 @@
 									<li class="accaunt__menu_item active">
 										<a href="#" class="accaunt__menu_item__link">
 											<div class="accaunt__menu_block fic">
-												<img src="img/icons/list.svg" alt="icon" class="accaunt__menu_icon">
+												<img src="{% static 'img/icons/list.svg' %}" alt="icon" class="accaunt__menu_icon">
 												<span class="accaunt__menu_item__link_intro">Мои записи</span>
 											</div>	
 										</a>
@@ -57,7 +57,7 @@
 									<li class="accaunt__menu_item">
 										<a href="#" class="accaunt__menu_item__link">
 											<div class="accaunt__menu_block fic">
-												<img src="img/icons/settings.svg" alt="icon" class="accaunt__menu_icon">
+												<img src="{% static 'img/icons/settings.svg' %}" alt="icon" class="accaunt__menu_icon">
 												<span class="accaunt__menu_item__link_intro">Настройки</span>
 											</div>	
 										</a>
@@ -65,7 +65,7 @@
 									<li class="accaunt__menu_item">
 										<a href="#" class="accaunt__menu_item__link">
 											<div class="accaunt__menu_block fic">
-												<img src="img/icons/tex.svg" alt="icon" class="accaunt__menu_icon">
+												<img src="{% static 'img/icons/tex.svg' %}" alt="icon" class="accaunt__menu_icon">
 												<span class="accaunt__menu_item__link_intro">Тех. поддержка</span>
 											</div>	
 										</a>
@@ -73,7 +73,7 @@
 									<li class="accaunt__menu_item">
 										<a href="#" class="accaunt__menu_item__link">
 											<div class="accaunt__menu_block fic">
-												<img src="img/icons/pay.svg" alt="icon" class="accaunt__menu_icon">
+												<img src="{% static 'img/icons/pay.svg' %}" alt="icon" class="accaunt__menu_icon">
 												<span class="accaunt__menu_item__link_intro">Платежи</span>
 											</div>	
 										</a>
@@ -85,11 +85,11 @@
 							<nav>
 								<ul class="mobMenu__menu">
 									<li class="mobMenu__menu_item">
-										<a href="#" class="mobMenu__menu_link">Мастера</a>
+										<a href="/#masters" class="mobMenu__menu_link">Мастера</a>
 									</li>
-									<li class="mobMenu__menu_item"><a href="#" class="mobMenu__menu_link">Услуги</a></li>
-									<li class="mobMenu__menu_item"><a href="#" class="mobMenu__menu_link">Отзывы</a></li>
-									<li class="mobMenu__menu_item"><a href="#" class="mobMenu__menu_link">Контакты</a></li>
+									<li class="mobMenu__menu_item"><a href="/#services" class="mobMenu__menu_link">Услуги</a></li>
+									<li class="mobMenu__menu_item"><a href="/#reviews" class="mobMenu__menu_link">Отзывы</a></li>
+									<li class="mobMenu__menu_item"><a href="/#contacts" class="mobMenu__menu_link">Контакты</a></li>
 								</ul>
 							</nav>
 							<a href="#" class="mobMenu__account">Личный кабинет</a>
@@ -109,20 +109,20 @@
 			<div class="header">
 				<div class="row">
 					<div class="col-2 col-md-2 mob">
-						<img src="img/hamburger.svg" alt="hamburger" class="header__mobMenu">
+						<img src="{% static 'img/hamburger.svg' %}" alt="hamburger" class="header__mobMenu">
 					</div>
 					<div class="col-5 col-md-3 col-lg-2">
 						<a href="/">
-							<img src="img/Logo.svg" alt="Logo" class="logo header__logo">
+							<img src="{% static 'img/Logo.svg' %}" alt="Logo" class="logo header__logo">
 						</a>
 					</div>
 					<div class="col-md-5 ">
 						<nav>
 						<ul class="menu">
-							<li class="menu__item"><a href="#" class="menu__item_link">Мастера</a></li>
-							<li class="menu__item"><a href="#" class="menu__item_link">Услуги</a></li>
-							<li class="menu__item"><a href="#" class="menu__item_link">Отзывы</a></li>
-							<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
+							<li class="menu__item"><a href="/#masters" class="menu__item_link">Мастера</a></li>
+							<li class="menu__item"><a href="/#services" class="menu__item_link">Услуги</a></li>
+							<li class="menu__item"><a href="/#reviews" class="menu__item_link">Отзывы</a></li>
+							<li class="menu__item"><a href="/#contacts" class="menu__item_link">Контакты</a></li>
 						</ul>
 					</nav>
 					</div>
@@ -130,7 +130,7 @@
 						<div class="header__block">
 						<a href="tel:+79179023800"><button class="header__block_btn">Перезвоните мне</button></a>
 						<div class="header__block_auth">
-							<img src="img/avatars/1.svg" alt="account" class="header__account_img">
+							<img src="{% static 'img/avatars/1.svg' %}" alt="account" class="header__account_img">
 							<span class="header__block_auth__intro">Алиса И.</span>
 						</div>
 					</div>
@@ -149,7 +149,7 @@
 					<div class="col-md-2">
 						<div class="accaunt__left">
 							<div class="accaunt__ava fic">
-								<img src="img/avatars/1.svg" alt="avatar" class="accaunt__ava_img">
+								<img src="{% static 'img/avatars/1.svg' %}" alt="avatar" class="accaunt__ava_img">
 								<span class="accaunt__ava_name">Алиса И.</span>
 							</div>
 							<div class="accaunt__settings fic">
@@ -162,7 +162,7 @@
 									<li class="accaunt__menu_item active">
 										<a href="#" class="accaunt__menu_item__link">
 											<div class="accaunt__menu_block fic">
-												<img src="img/icons/list.svg" alt="icon" class="accaunt__menu_icon">
+												<img src="{% static 'img/icons/list.svg' %}" alt="icon" class="accaunt__menu_icon">
 												<span class="accaunt__menu_item__link_intro">Мои записи</span>
 											</div>	
 										</a>
@@ -170,7 +170,7 @@
 									<li class="accaunt__menu_item">
 										<a href="#" class="accaunt__menu_item__link">
 											<div class="accaunt__menu_block fic">
-												<img src="img/icons/settings.svg" alt="icon" class="accaunt__menu_icon">
+												<img src="{% static 'img/icons/settings.svg' %}" alt="icon" class="accaunt__menu_icon">
 												<span class="accaunt__menu_item__link_intro">Настройки</span>
 											</div>	
 										</a>
@@ -178,7 +178,7 @@
 									<li class="accaunt__menu_item">
 										<a href="#" class="accaunt__menu_item__link">
 											<div class="accaunt__menu_block fic">
-												<img src="img/icons/tex.svg" alt="icon" class="accaunt__menu_icon">
+												<img src="{% static 'img/icons/tex.svg' %}" alt="icon" class="accaunt__menu_icon">
 												<span class="accaunt__menu_item__link_intro">Тех. поддержка</span>
 											</div>	
 										</a>
@@ -186,7 +186,7 @@
 									<li class="accaunt__menu_item">
 										<a href="#" class="accaunt__menu_item__link">
 											<div class="accaunt__menu_block fic">
-												<img src="img/icons/pay.svg" alt="icon" class="accaunt__menu_icon">
+												<img src="{% static 'img/icons/pay.svg' %}" alt="icon" class="accaunt__menu_icon">
 												<span class="accaunt__menu_item__link_intro">Платежи</span>
 											</div>	
 										</a>
@@ -216,7 +216,7 @@
 						<div class="notes__content notes__content_upcoming">	
 							<div class="notes__main_title">ПРЕДСТОЯЩИЕ</div>
 							<div class="notes__main_block">
-								<img src="img/services/service3.svg" alt="service1" class="notes__main_block__img">
+								<img src="{% static 'img/services/service3.svg' %}" alt="service1" class="notes__main_block__img">
 								<div class="notes__main_block__elems">
 									<div class="notes__main_block__header fic">
 										<div class="notes__main_block__header__itesm fic">
@@ -257,7 +257,7 @@
 								</div>
 							</div>
 							<div class="notes__main_block">
-								<img src="img/services/service1.svg" alt="service1" class="notes__main_block__img">
+								<img src="{% static 'img/services/service1.svg' %}" alt="service1" class="notes__main_block__img">
 								<div class="notes__main_block__elems">
 									<div class="notes__main_block__header fic">
 										<div class="notes__main_block__header__itesm fic">
@@ -302,7 +302,7 @@
 						<div class="notes__content notes__content_history">	
 							<div class="notes__main_title">ПРОШЕДШИЕ</div>
 							<div class="notes__main_block">
-								<img src="img/services/service1.svg" alt="service1" class="notes__main_block__img">
+								<img src="{% static 'img/services/service1.svg' %}" alt="service1" class="notes__main_block__img">
 								<div class="notes__main_block__elems">
 									<div class="notes__main_block__header fic">
 										<div class="notes__main_block__header__itesm fic">
@@ -342,7 +342,7 @@
 								</div>
 							</div>
 							<div class="notes__main_block">
-								<img src="img/services/service1.svg" alt="service1" class="notes__main_block__img">
+								<img src="{% static 'img/services/service1.svg' %}" alt="service1" class="notes__main_block__img">
 								<div class="notes__main_block__elems">
 									<div class="notes__main_block__header fic">
 										<div class="notes__main_block__header__itesm fic">
@@ -401,15 +401,15 @@
 				<div class="footer__block">
 					<div class="row">
 						<div class="col-md-3 col-lg-2">
-							<a href="/"><img src="img/Logo.svg" alt="logo" class="footer__logo"></a>
+							<a href="/"><img src="{% static 'img/Logo.svg' %}" alt="logo" class="footer__logo"></a>
 						</div>
 						<div class="col-md-5 minMobHide">
 							<nav>
 								<ul class="menu">
-									<li class="menu__item"><a href="#" class="menu__item_link">Мастера</a></li>
-									<li class="menu__item"><a href="#" class="menu__item_link">Услуги</a></li>
-									<li class="menu__item"><a href="#" class="menu__item_link">Отзывы</a></li>
-									<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
+									<li class="menu__item"><a href="/#masters" class="menu__item_link">Мастера</a></li>
+									<li class="menu__item"><a href="/#services" class="menu__item_link">Услуги</a></li>
+									<li class="menu__item"><a href="/#reviews" class="menu__item_link">Отзывы</a></li>
+									<li class="menu__item"><a href="/#contacts" class="menu__item_link">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -429,10 +429,10 @@
 							<div class="col-md-5 minMobShow">
 								<nav>
 									<ul class="menu">
-										<li class="menu__item"><a href="#" class="menu__item_link">Мастера</a></li>
-										<li class="menu__item"><a href="#" class="menu__item_link">Услуги</a></li>
-										<li class="menu__item"><a href="#" class="menu__item_link">Отзывы</a></li>
-										<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
+										<li class="menu__item"><a href="/#masters" class="menu__item_link">Мастера</a></li>
+										<li class="menu__item"><a href="/#services" class="menu__item_link">Услуги</a></li>
+										<li class="menu__item"><a href="/#reviews" class="menu__item_link">Отзывы</a></li>
+										<li class="menu__item"><a href="/#contacts" class="menu__item_link">Контакты</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -520,8 +520,8 @@
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="js/air-datepicker.js"></script>
-	<script src="js/jquery.arcticmodal-0.3.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="{% static 'js/air-datepicker.js' %}"></script>
+	<script src="{% static 'js/jquery.arcticmodal-0.3.min.js' %}"></script>
+	<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
