--- a/beauty_salon/templates/service.html
+++ b/beauty_salon/templates/service.html
@@ -259,7 +259,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<button  class="time__btns_next">Далее</button>
-							<button  class="time__btns_home">На главную</button>
+							<button  class="time__btns_home" onclick="window.location.href='/'">На главную</button>
 						</div>
 					</div>
 				</div>
