--- a/templates/popup.html
+++ b/templates/popup.html
@@ -5,10 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
 	<div class="authPopup popup">
+		<form method="post" action="">
+        {% csrf_token %}
 		<div class="popup__title authPopup__title">Войти по коду</div>
 		<p class="popup__text authPopup__text">Введите свой номер телефона, мы вышлем на него код</p>
 		<form action="#" class="authPopup__form">
@@ -83,5 +85,14 @@
 			<button class="tipsPopup__btn popup__btn">Оплатить</button>
 		</form>
 	</div>
+
+	<a href="/">
+		<img src="{% static 'img/Logo.svg' %}" alt="Logo" class="logo header__logo">
+	</a>
+
+	<a href="/#masters" class="menu__item_link">Мастера</a>
+	<a href="/#services" class="menu__item_link">Услуги</a>
+	<a href="/#reviews" class="menu__item_link">Отзывы</a>
+	<a href="/#contacts" class="menu__item_link">Контакты</a>
 </body>
 </html>
