--- a/beauty_salon/templates/index.html
+++ b/beauty_salon/templates/index.html
@@ -280,7 +280,8 @@
 				<div class="title contacts__title">Контакты</div>
 				<div class="row">
 					<div class="col-md-12 col-lg-4 col-xl-3">
-						<form action="#" class="contacts__form">
+						<form action="#" class="contacts__form" method="post">
+							{% csrf_token %}
 							<div class="contacts__form_title">Оставьте заявку на консультацию</div>
 							<div class="contacts__form_block">
 								<input type="text" name="fname" class="contacts__form_iunput" placeholder="Введите имя" required>
@@ -288,10 +289,9 @@
 									<input type="text" name="tel" class="contacts__form_iunput" placeholder="+7(999)999--99-99" required>
 								</div>
 							</div>
-							
 							<textarea name="contactsTextarea" class="contacts__form_textarea" placeholder="Вопрос(необязательно)"></textarea>
 							<div class="contacts__form_checkboxBlock fic">
-								<input type="checkbox" class="contacts__form_checkbox" checked>
+								<input type="checkbox" name="checkbox" class="contacts__form_checkbox" checked required>
 								<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфидециоальности</span>
 							</div>
 							<button type="submit" class="contacts__form_btn">Отправить</button>
