--- a/beauty_salon/templates/index.html
+++ b/beauty_salon/templates/index.html
@@ -344,7 +344,8 @@
 					</div>
 					<div class="col-md-12 col-lg-5 col-xl-6">
 						<div class="contacts__map">
-							<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab7c7d417e660dbf6565501ccc84acd33ec7588fd751ceabc6947e3e9b881e413&amp;lang=ru_RU&amp;scroll=true"></script>
+							{% comment %} <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab7c7d417e660dbf6565501ccc84acd33ec7588fd751ceabc6947e3e9b881e413&amp;lang=ru_RU&amp;scroll=true"></script> {% endcomment %}
+							 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A91e3cee84a6782f14a0c68de39fcaf00a0583e17678ff35adc48da2ef8da821f&amp;width=568&amp;height=315&amp;lang=ru_RU&amp;scroll=true"></script>
 						</div>
 					</div>
 				</div>
