--- a/beauty_salon/templates/index.html
+++ b/beauty_salon/templates/index.html
@@ -79,13 +79,25 @@
 					</nav>
 					</div>
 					<div class="col-2 col-md-2 col-lg-3">
+						{% if user.is_authenticated %}
+							<div class="accaunt__settings fic">
+								{% if user.avatar %}
+								<img src="{{ user.avatar.url }}" alt="avatar" class="accaunt__ava_img">
+								{% else %}
+									<img src="{% static 'img/acc.svg' %}" alt="account" class="header__account_img">
+								<span class="accaunt__ava_name">
+									<a href="{% url 'notes' %}" >{{ user.username }}</a>
+								</span>
+								{% endif %}
+							</div>
+						{% else %}
 						<div class="header__block">
-						<a href="tel:+79179023800"><button class="header__block_btn">Перезвоните мне</button></a>
-						<div class="header__block_auth">
+						<a href="{% url 'call_me' %}"><button class="header__block_btn">Перезвоните мне</button></a>
+							<a href="{% url 'register' %}">Регистрация</a>
 							<img src="{% static 'img/acc.svg' %}" alt="account" class="header__account_img">
-							<span class="header__block_auth__intro">Войти</span>
+							<a href="{% url 'login' %}">Войти</a>
 						</div>
-					</div>
+						{% endif %}
 					</div>
 				</div>
 				
@@ -134,6 +146,21 @@
 				</div>
 				<div class="title dec">Наши салоны</div>
 				<div class="row salonsSlider">
+					{% for salon in salons %}
+					<div class="col-6 col-md-4 col-lg-4 col-xl-3">
+						<div class="salons__block">
+							{% if salon.image %}
+								<img src="{{ salon.image.url }}" alt="salon" class="salons__block_img">
+							{% else %}
+								<img src="{% static 'img/salons/salon1.svg' %}" alt="salon" class="salons__block_img">
+							{% endif %}
+							<div class="salons__elems">
+								<div class="block__title salons__elems_title">{{ salon.name }}</div>
+								<div class="salons__elems_light">{{ salon.address }}</div>
+							</div>
+						</div>
+					</div>
+					{% empty %}
 					<div class="col-6 col-md-4 col-lg-4 col-xl-3">
 						<div class="salons__block">
 							<img src="{% static 'img/salons/salon1.svg' %}" alt="salon" class="salons__block_img">
@@ -161,16 +188,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-6 col-md-4 col-lg-4 col-xl-3 decVis">
-						<div class="salons__block">
-							<img src="{% static 'img/salons/salon1.svg' %}" alt="salon" class="salons__block_img">
-							<div class="salons__elems">
-								<div class="salons__elems_title">BeautyCity Красная</div>
-								<div class="salons__elems_light">ул. Красная, д. 10</div>
-							</div>
-						</div>
-					</div>
-
+					{% endfor %}
 				</div>
 			</div>
 		</div>
@@ -191,6 +209,21 @@
 				</div>
 				
 				<div class="row servicesSlider">
+					{% for service in services %}
+					<div class="col-md-3">
+						<div class="cardBlock services__block">
+							{% if service.image %}
+								<img src="{{ service.image.url }}" alt="service" class="services__block_img">
+							{% else %}
+								<img src="{% static 'img/services/service1.svg' %}" alt="service" class="services__block_img">
+							{% endif %}
+							<div class="services__elems">
+								<div class="services__elems_title">{{ service.name }}</div>
+								<div class="services__elems_light">{% if service.price %}{{ service.price }} ₽{% endif %}</div>
+							</div>
+						</div>
+					</div>
+					{% empty %}
 					<div class="col-md-3">
 						<div class="cardBlock services__block">
 							<img src="{% static 'img/services/service1.svg' %}" alt="service" class="services__block_img">
@@ -222,31 +255,12 @@
 						<div class="cardBlock services__block">
 							<img src="{% static 'img/services/service4.svg' %}" alt="service" class="services__block_img">
 							<div class="services__elems">
-								<div class="services__elems_title">Укладка волос</div>
-								<div class="services__elems_light">3 000 ₽</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="cardBlock services__block">
-							<img src="{% static 'img/services/service5.svg' %}" alt="service" class="services__block_img">
-							<div class="services__elems">
-								<div class="services__elems_title">Педикюр</div>
-								<div class="services__elems_light">1 000 ₽</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="cardBlock services__block">
-							<img src="{% static 'img/services/service6.svg' %}" alt="service" class="services__block_img">
-							<div class="services__elems">
 								<div class="services__elems_title">Окрашивание волос</div>
 								<div class="services__elems_light">5 000 ₽</div>
 							</div>
 						</div>
 					</div>
-					
-
+					{% endfor %}
 				</div>
 			</div>
 		</div>
@@ -267,6 +281,41 @@
 				</div>
 				
 				<div class="row mastersSlider">
+					{% for master in masters %}
+					<div class="col-md-3">
+						<div class="cardBlock masters__block">
+							<div class="masters__header fic">
+								{% if master.image %}
+									<img src="{{ master.image.url }}" alt="master" class="masters__header_img">
+								{% else %}
+									<img src="{% static 'img/masters/master1.svg' %}" alt="master" class="masters__header_img">
+								{% endif %}
+								<div class="masters__header_elmes">
+									<div class="masters__header_name">{{ master.name }}</div>
+									<img src="{% static 'img/rating.svg' %}" alt="rating" class="masters__header_rating">
+									<div class="masters__header_reviews">{{ master.appointments.count }} записей</div>
+								</div>
+							</div>
+							<div class="masters__main">
+								<div class="masters__main_speciality">СПЕЦИАЛЬНОСТЬ:</div>
+								<div class="masters__main_intro">
+									{% for service in master.services.all %}
+										{{ service.name }}{% if not forloop.last %}, {% endif %}
+									{% empty %}
+										Мастер
+									{% endfor %}
+								</div>
+							</div>
+							<div class="masters__footer fic">
+								<div class="masters__footer_block">
+									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
+									<div class="masters__footer_num">{{ master.get_experience|default:"Нет данных" }}</div>
+								</div>
+								<a href="/service/"><button class="masters__footer_btn">Записаться</button></a>
+							</div>
+						</div>
+					</div>
+					{% empty %}
 					<div class="col-md-3">
 						<div class="cardBlock masters__block">
 							<div class="masters__header fic">
@@ -286,7 +335,7 @@
 									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
 									<div class="masters__footer_num">3 г. 10 мес.</div>
 								</div>
-								<button class="masters__footer_btn">Записаться</button>
+								<a href="/service/"><button class="masters__footer_btn">Записаться</button></a>
 							</div>
 						</div>
 					</div>
@@ -309,105 +358,11 @@
 									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
 									<div class="masters__footer_num">4 г. 9 мес.</div>
 								</div>
-								<button class="masters__footer_btn">Записаться</button>
+								<a href="/service/"><button class="masters__footer_btn">Записаться</button></a>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
-						<div class="cardBlock masters__block">
-							<div class="masters__header fic">
-								<img src="{% static 'img/masters/master3.svg' %}" alt="master" class="masters__header_img">
-								<div class="masters__header_elmes">
-									<div class="masters__header_name">Ева Колесова</div>
-									<img src="{% static 'img/rating.svg' %}" alt="rating" class="masters__header_rating">
-									<div class="masters__header_reviews">18 отзывов</div>
-								</div>
-							</div>
-							<div class="masters__main">
-								<div class="masters__main_speciality">СПЕЦИАЛЬНОСТЬ:</div>
-								<div class="masters__main_intro">Визажист</div>
-							</div>
-							<div class="masters__footer fic">
-								<div class="masters__footer_block">
-									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
-									<div class="masters__footer_num">1 г. 2 мес.</div>
-								</div>
-								<button class="masters__footer_btn">Записаться</button>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="cardBlock masters__block">
-							<div class="masters__header fic">
-								<img src="{% static 'img/masters/master4.svg' %}" alt="master" class="masters__header_img">
-								<div class="masters__header_elmes">
-									<div class="masters__header_name">Мария Суворова</div>
-									<img src="{% static 'img/rating.svg' %}" alt="rating" class="masters__header_rating">
-									<div class="masters__header_reviews">32 отзыва</div>
-								</div>
-							</div>
-							<div class="masters__main">
-								<div class="masters__main_speciality">СПЕЦИАЛЬНОСТЬ:</div>
-								<div class="masters__main_intro">Стилист</div>
-							</div>
-							<div class="masters__footer fic">
-								<div class="masters__footer_block">
-									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
-									<div class="masters__footer_num">1 г. 1 мес.</div>
-								</div>
-								<button class="masters__footer_btn">Записаться</button>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="cardBlock masters__block">
-							<div class="masters__header fic">
-								<img src="{% static 'img/masters/master5.svg' %}" alt="master" class="masters__header_img">
-								<div class="masters__header_elmes">
-									<div class="masters__header_name">Мария Максимова</div>
-									<img src="{% static 'img/rating.svg' %}" alt="rating" class="masters__header_rating">
-									<div class="masters__header_reviews">42 отзыва</div>
-								</div>
-							</div>
-							<div class="masters__main">
-								<div class="masters__main_speciality">СПЕЦИАЛЬНОСТЬ:</div>
-								<div class="masters__main_intro">Стилист</div>
-							</div>
-							<div class="masters__footer fic">
-								<div class="masters__footer_block">
-									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
-									<div class="masters__footer_num">3 г. 1 мес.</div>
-								</div>
-								<button class="masters__footer_btn">Записаться</button>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="cardBlock masters__block">
-							<div class="masters__header fic">
-								<img src="{% static 'img/masters/master6.svg' %}" alt="master" class="masters__header_img">
-								<div class="masters__header_elmes">
-									<div class="masters__header_name">Майя Соболева</div>
-									<img src="{% static 'img/rating.svg' %}" alt="rating" class="masters__header_rating">
-									<div class="masters__header_reviews">32 отзыва</div>
-								</div>
-							</div>
-							<div class="masters__main">
-								<div class="masters__main_speciality">СПЕЦИАЛЬНОСТЬ:</div>
-								<div class="masters__main_intro">Визажист</div>
-							</div>
-							<div class="masters__footer fic">
-								<div class="masters__footer_block">
-									<div class="masters__footer_light">СТАЖ РАБОТЫ:</div>
-									<div class="masters__footer_num">1 г. 1 мес.</div>
-								</div>
-								<button class="masters__footer_btn">Записаться</button>
-							</div>
-						</div>
-					</div>
-					
-					
-
+					{% endfor %}
 				</div>
 			</div>
 		</div>
@@ -429,80 +384,49 @@
 				</div>
 				
 				<div class="row reviewsSlider">
+					{% for feedback in feedbacks %}
 					<div class="col-md-3">
-						<div class="reviews__block">
+						<div class="cardBlock reviews__block">
+							<div class="reviews__name">{{ feedback.client }}</div>
+							<img src="{% static 'img/rating.svg' %}" alt="rating" class="reviews__header_rating">
+							<div class="reviews__block_text">
+								{{ feedback.comment }}
+							</div>
+							<div class="reviews__block_date">{{ feedback.create_at|date:"d E Y" }}</div>
+						</div>
+					</div>
+					{% empty %}
+					<div class="col-md-3">
+						<div class="cardBlock reviews__block">
 							<div class="reviews__name">Светлана Г.</div>
 							<img src="{% static 'img/rating.svg' %}" alt="rating" class="reviews__header_rating">
 							<div class="reviews__block_text">
-								Отличное место для красоты, очень доброжелательный и отзывчивый персонал, девочки заботливые, аккуратные и большие профессионалы. Посещаю салон с самого начала, но он не теряет своей привлекательности, как в обслуживании.
+								Отличное место для красоты, очень доброжелательный и отзывчивый персонал, девочки заботливые, аккуратные и большие профессионалы.
 							</div>
 							<div class="reviews__block_date">12 ноября 2022</div>
 						</div>
 					</div>
 					<div class="col-md-3">
-						<div class="reviews__block">
+						<div class="cardBlock reviews__block">
 							<div class="reviews__name">Ольга Н.</div>
 							<img src="{% static 'img/rating.svg' %}" alt="rating" class="reviews__header_rating">
 							<div class="reviews__block_text">
-								Мне всё лень было отзыв писать, но вот "руки дошли". Несколько раз здесь стриглась, мастера звали, кажется, Катя. Все было отлично, приятная молодая женщина и по стрижке вопросов не было)
+								Мне всё лень было отзыв писать, но вот "руки дошли". Несколько раз здесь стриглась, мастера звали, кажется, Катя. Все было отлично.
 							</div>
 							<div class="reviews__block_date">5 ноября 2022</div>
 						</div>
 					</div>
 					<div class="col-md-3">
-						<div class="reviews__block">
-							<div class="reviews__name">Ольга Н.</div>
-							<img src="{% static 'img/rating.svg' %}" alt="rating" class="reviews__header_rating">
-							<div class="reviews__block_text">
-								Мне всё лень было отзыв писать, но вот "руки дошли". Несколько раз здесь стриглась, мастера звали, кажется, Катя. Все было отлично, приятная молодая женщина и по стрижке вопросов не было)
-							</div>
-							<div class="reviews__block_date">5 ноября 2022</div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="reviews__block">
+						<div class="cardBlock reviews__block">
 							<div class="reviews__name">Елена В.</div>
 							<img src="{% static 'img/rating.svg' %}" alt="rating" class="reviews__header_rating">
 							<div class="reviews__block_text">
-								Делала процедуру микротоки у мастера Светланы . Светлана внимательная, приветливая, ненавязчивая. Рекомендую и мастера, и процедуру. Еще делала бровки у Татьяны , я в восторге , брови просто идеально сдеданы
+								Делала процедуру микротоки у мастера Светланы. Светлана внимательная, приветливая, ненавязчивая. Рекомендую и мастера, и процедуру.
 							</div>
 							<div class="reviews__block_date">28 октября 2022</div>
 						</div>
 					</div>
-					<div class="col-md-3">
-						<div class="reviews__block">
-							<div class="reviews__name">Виктория Г.</div>
-							<img src="{% static 'img/rating.svg' %}" alt="rating" class="reviews__header_rating">
-							<div class="reviews__block_text">
-								Была на педикюре у Ольги. Очень понравилось. Все инструменты стерильные, упакованы в крафт-пакет. Для меня очень важно было. Оборудование новое.
-							</div>
-							<div class="reviews__block_date">13 октября 2022</div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="reviews__block">
-							<div class="reviews__name">Анастасия Е.</div>
-							<img src="{% static 'img/rating.svg' %}" alt="rating" class="reviews__header_rating">
-							<div class="reviews__block_text">
-								Сегодня прокололи ушки дочке в этом салоне) Остались довольны обслуживанием и персоналом. Девочки очень приветливые и внимательные . Спасибо большое, всё понравилось)
-							</div>
-							<div class="reviews__block_date">8 октября 2022</div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="reviews__block">
-							<div class="reviews__name">Алина Ц.</div>
-							<img src="{% static 'img/rating.svg' %}" alt="rating" class="reviews__header_rating">
-							<div class="reviews__block_text">
-								Отличный салон, сервис на самом высоком уровне, всем мастерам огромное уважение за труд, обязательно вернусь
-							</div>
-							<div class="reviews__block_date">1 октября 2022</div>
-						</div>
-					</div>
-					
-					
-					
-
+					{% endfor %}
 				</div>
 			</div>
 		</div>
@@ -513,7 +437,8 @@
 				<div class="title contacts__title">Контакты</div>
 				<div class="row">
 					<div class="col-md-12 col-lg-4 col-xl-3">
-						<form action="#" class="contacts__form">
+						<form action="" method="post" class="contacts__form">
+							{% csrf_token %}
 							<div class="contacts__form_title">Оставьте заявку на консультацию</div>
 							<div class="contacts__form_block">
 								<input type="text" name="fname" class="contacts__form_iunput" placeholder="Введите имя" required>
@@ -524,7 +449,7 @@
 							
 							<textarea name="contactsTextarea" class="contacts__form_textarea" placeholder="Вопрос(необязательно)"></textarea>
 							<div class="contacts__form_checkboxBlock fic">
-								<input type="checkbox" class="contacts__form_checkbox" checked>
+								<input type="checkbox" name="checkbox" class="contacts__form_checkbox" checked required>
 								<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфидециоальности</span>
 							</div>
 							<button type="submit" class="contacts__form_btn">Отправить</button>
@@ -532,6 +457,15 @@
 					</div>
 					<div class="col-md-12 col-lg-3">
 						<div class="contacts__locationBlock">
+							{% for salon in salons %}
+							<div class="contacts__location fic">
+								<img src="{% static 'img/location.svg' %}" alt="location" class="contacts__location_icon">
+								<div class="contacts__location_info">
+									<div class="contacts__location_intro">{{ salon.address }}</div>
+								<div class="contacts__location_date">с 10:00 до 20:00  без выходных</div>
+								</div>
+							</div>
+							{% empty %}
 							<div class="contacts__location fic">
 								<img src="{% static 'img/location.svg' %}" alt="location" class="contacts__location_icon">
 								<div class="contacts__location_info">
@@ -553,6 +487,7 @@
 								<div class="contacts__location_date">с 10:00 до 20:00  без выходных</div>
 								</div>
 							</div>
+							{% endfor %}
 						</div>
 						<div class="contacts__block">
 							<div class="contacts__social">
@@ -575,7 +510,7 @@
 					</div>
 					<div class="col-md-12 col-lg-5 col-xl-6">
 						<div class="contacts__map">
-							<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab7c7d417e660dbf6565501ccc84acd33ec7588fd751ceabc6947e3e9b881e413&amp;lang=ru_RU&amp;scroll=true"></script>
+							<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A91e3cee84a6782f14a0c68de39fcaf00a0583e17678ff35adc48da2ef8da821f&amp;width=568&amp;height=315&amp;lang=ru_RU&amp;scroll=true"></script>
 						</div>
 					</div>
 				</div>
