--- a/beauty_salon/templates/serviceFinally.html
+++ b/beauty_salon/templates/serviceFinally.html
@@ -102,55 +102,62 @@
 				<div class="row">
 					<div class="col-md-6 col-lg-6">
 						<div class="breadCrumbs">
-							<a href="#" class="breadCrumbs__item">На главную</a>
+							<a href="/" class="breadCrumbs__item">На главную</a>
 						</div>
 						<div class="service__block">
 							<h1 class="service__title">Запись на услугу</h1>
 						</div>
-						<form action="#" class="serviceFinally__form">
+						{% if success %}
+							<div class="alert alert-success">Ваша запись успешно создана!</div>
+						{% else %}
+						<form method="post" class="serviceFinally__form">
+							{% csrf_token %}
 							<div class="serviceFinally__form_block">
 								<div class="serviceFinally__form_header fic">
-									<span class="serviceFinally__form_header__number">Запись №32985</span>
+									<span class="serviceFinally__form_header__number">Подтверждение записи</span>
 									<div class="serviceFinally__form_header__item fic">
-										<div class="serviceFinally__form_header__service">BeautyCity Пушкинская</div>
-										<div class="serviceFinally__form_header__address">ул. Пушкинская, д. 78А</div>
+										<div class="serviceFinally__form_header__service">{{ salon.name }}</div>
+										<div class="serviceFinally__form_header__address">{{ salon.address }}</div>
 									</div>
 								</div>
 								<div class="serviceFinally__form_content">
 									<div class="serviceFinally__form_content__block fic">
-										<div class="serviceFinally__form_content__title">Дневной макияж</div>
-										<div class="serviceFinally__form_content__price">750 ₽</div>
+										<div class="serviceFinally__form_content__title">{{ service.name }}</div>
+										<div class="serviceFinally__form_content__price">{{ service.price }} ₽</div>
 									</div>
 									<div class="serviceFinally__form_content__block fic">
 										<div class="serviceFinally__form_content__items fic">
-										  	<img src="{% static 'img/masters/avatar/vizajist1.svg' %}" alt="avatar" class="accordion__block_img">
-										  	<div class="accordion__block_master">Елена Грибнова</div>
-									    </div>
-									    <div class="serviceFinally__form_content__item fic">
-											<div class="serviceFinally__form_content__time">16:30</div>
-											<div class="serviceFinally__form_content__date">18 ноября</div>
+											<div class="accordion__block_master">{{ master.name }}</div>
+										</div>
+										<div class="serviceFinally__form_content__item fic">
+											<div class="serviceFinally__form_content__time">{{ time }}</div>
+											<div class="serviceFinally__form_content__date">{{ date }}</div>
 										</div>
 									</div>
-									
 								</div>
 							</div>
 							<div class="serviceFinally__form_itesm">
+								<input type="hidden" name="salon" value="{{ salon.id }}">
+								<input type="hidden" name="master" value="{{ master.id }}">
+								<input type="hidden" name="service" value="{{ service.id }}">
+								<input type="hidden" name="date" value="{{ date }}">
+								<input type="hidden" name="time" value="{{ time }}">
 								<div class="contacts__form_block fic">
 									<input type="text" name="fname" class="contacts__form_iunput" placeholder="Введите имя" required="">
 									<div class="contacts__form_inputBlock">
 										<input type="text" name="tel" class="contacts__form_iunput" placeholder="+7(999)999--99-99" required="">
 									</div>
 								</div>
-								
 								<textarea name="contactsTextarea" class="contacts__form_textarea" placeholder="Вопрос(необязательно)"></textarea>
 								<div class="contacts__form_checkboxBlock fic">
 									<input type="checkbox" class="contacts__form_checkbox" checked="">
 									<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфидециоальности</span>
 								</div>
 								<button type="submit" class="serviceFinallys__form_btn">Записаться</button>
-								<button type="submit" class="serviceFinallys__form_back">Назад</button>
+								<button type="button" class="serviceFinallys__form_back" onclick="window.history.back()">Назад</button>
 							</div>
-						</form>	
+						</form>
+						{% endif %}
 					</div>
 					<div class="col-md-12 col-lg-5">
 						<img src="{% static 'img/bannerImg.svg' %}" alt="bannerImg" class="banner__img">
