Added the back button

--- a/beauty_salon/templates/feedback.html
+++ b/beauty_salon/templates/feedback.html
@@ -36,6 +36,10 @@
 				<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфидециоальности</span>
 			</div>
 			<button class="tipsPopup__btn popup__btn">Отправить</button>
+			<br>
+			<br>
+			<button type="button" class="tipsPopup__btn popup__btn" onclick="window.location.href='{% url 'beauty_salon:notes' %}'">Назад</button>
+
 		</form> 
 	</div>
 
