--- a/beauty_salon/templates/manager.html
+++ b/beauty_salon/templates/manager.html
@@ -165,7 +165,7 @@
 								<span class="accaunt__ava_name" >{{ user.username }}</span>
 							</div>
 							<div class="accaunt__settings fic">
-								<a href="#" class="accaunt__settings_intro">Изменить профиль</a>
+								{% comment %} <a href="#" class="accaunt__settings_intro">Изменить профиль</a> {% endcomment %}
 								<a href="{% url 'beauty_salon:logout' %}" class="accaunt__settings_out">Выйти</a>
 							</div>
 							<nav>
