--- a/beauty_salon/templates/feedback.html
+++ b/beauty_salon/templates/feedback.html
@@ -25,6 +25,12 @@
 		<div class="popup__title reviewPopup__title">Отзыв</div>
 		<form method="post" action="#" class="reviewPopup__form">
 			{% csrf_token %}
+			<select name="master_id" class="popup__input" required>
+				<option value="" disabled {% if not data.master_id %}selected{% endif %}>Выберите мастера</option>
+				{% for master in masters %}
+					<option value="{{ master.id }}" {% if data.master_id == master.id|stringformat:"s" %}selected{% endif %}>{{ master.name }}</option>
+				{% endfor %}
+			</select>
 			<input type="text" name="fname" class="paymentPopup__form_input popup__input" placeholder="Введите имя" required>
 			<div class="contacts__form_inputBlock">
 				<input type="contact_tel" name="tel" class="contacts__form_iunput" placeholder="+7(999)999--99-99" required="">
