--- a/beauty_salon/templates/index.html
+++ b/beauty_salon/templates/index.html
@@ -266,7 +266,9 @@
 								<div class="masters__header_elmes">
 									<div class="masters__header_name">{{ master.name }}</div>
 									<img src="{% static 'img/rating.svg' %}" alt="rating" class="masters__header_rating">
-									<div class="masters__header_reviews">{{ master.appointments.count }} записей</div>
+									<div class="masters__header_reviews">
+										{{ master.feedbacks.count }} отзывов
+									</div>
 								</div>
 							</div>
 							<div class="masters__main">
@@ -541,35 +543,25 @@
 							</div>
 							<div class="col-md-3">
 								<div class="footer__copy">2022. Все права защищены</div>
- защищены</div>
-				<input type="text" name="tel" class="contacts__form_iunput" placeholder="+7(999)999--99-99" required="">
-				</div>
-				<div class="contacts__form_checkboxBlock fic">
-					<input type="checkbox" class="contacts__form_checkbox" checked="">
-					<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфидециоальности</span>
-				</div>
-				<button type="submit" class="popup__btn authPopup__btn">Отправить</button>
-			</form>
-		</div>
-	</div>
-	<div style="display: none;">
-		<div class="box-modal confirmPopup popup" id="confirmModal">
-			<div class="box-modal_close arcticmodal-close"><img src="{% static 'img/x.svg' %}" alt="x"></div>
-			<div class="popup__title confirmPopup__title">Подтвердите номер</div>
-			<p class="popup__text confirmPopup__text">Введите код, полученный по SMS на номер +7 (928) 164 48 60</p>
-			<div class="confirmPopup__number">
-				<input type="text" name="num1" class="tipsPopup__form_inputNum popup__input" placeholder="" required="">
-				<input type="text" name="num2" class="tipsPopup__form_inputNum popup__input" placeholder="" required="">
-				<input type="text" name="num3" class="tipsPopup__form_inputNum popup__input" placeholder="" required="">
-				<input type="text" name="num4" class="tipsPopup__form_inputNum popup__input" placeholder="" required="">
+					</div>
+					<div style="display: none;">
+						<div class="box-modal confirmPopup popup" id="confirmModal">
+							<div class="box-modal_close arcticmodal-close"><img src="{% static 'img/x.svg' %}" alt="x"></div>
+							<div class="popup__title confirmPopup__title">Подтвердите номер</div>
+							<p class="popup__text confirmPopup__text">Введите код, полученный по SMS на номер +7 (928) 164 48 60</p>
+							<div class="confirmPopup__number">
+								<input type="text" name="num1" class="tipsPopup__form_inputNum popup__input" placeholder="" required="">
+								<input type="text" name="num2" class="tipsPopup__form_inputNum popup__input" placeholder="" required="">
+								<input type="text" name="num3" class="tipsPopup__form_inputNum popup__input" placeholder="" required="">
+								<input type="text" name="num4" class="tipsPopup__form_inputNum popup__input" placeholder="" required="">
 
-			</div>
-			<div class="confirmPopup__sms">Если SMS не пришло вы можете <a href="#" class="popup__link">запросить код повторно</a></div>
-			<div class="confirmPopup__changeNumber">
-				<a href="#" class="confirmPopup__link popup__link">Изменить номер телефона</a>
-			</div>
-		</div>
-	</div>
+							</div>
+							<div class="confirmPopup__sms">Если SMS не пришло вы можете <a href="#" class="popup__link">запросить код повторно</a></div>
+							<div class="confirmPopup__changeNumber">
+								<a href="#" class="confirmPopup__link popup__link">Изменить номер телефона</a>
+							</div>
+						</div>
+					</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
