--- a/beauty_salon/templates/service.html
+++ b/beauty_salon/templates/service.html
@@ -80,15 +80,15 @@
 					</div>
 					<div class="col-2 col-md-2 col-lg-3">
 						{% if user.is_authenticated %}
-							<div class="accaunt__settings fic">
+							<div class="accaunt__settings fic" style="width: 50px; height: 50px;">
 								{% if user.avatar %}
-								<img src="{{ user.avatar.url }}" alt="avatar" class="accaunt__ava_img">
+									<img src="{{ user.avatar.url }}" alt="avatar" class="accaunt__ava_img">
 								{% else %}
 									<img src="{% static 'img/acc.svg' %}" alt="account" class="header__account_img">
-								<span class="accaunt__ava_name">
-									<a href="{% url 'beauty_salon:notes' %}" >{{ user.username }}</a>
-								</span>
 								{% endif %}
+								<span class="accaunt__ava_name">
+									<a href="{% url 'beauty_salon:notes' %}" class="menu__item_link">{{ user.username }}</a>
+								</span>
 							</div>
 						{% else %}
 						<div class="header__block">
